--- a/src/index.css
+++ b/src/index.css
@@ -6,25 +6,33 @@ body {
     background-image: url("/wood-texture.jpg");
 }
 
-.react-pdf__Page__canvas {
+/* 詳細ページ用 */
+.react-pdf__Page * {
     aspect-ratio: 1 / 1.414;
+    height: 80vh!important;
+    width: auto!important;
+    @media (width < 640px) {
+        width: 85vw!important;
+        height: auto!important;
+    }
 }
+/* 一覧ページ用 */
 .grid {
     .react-pdf__Page__canvas {
         margin: 0 auto;
         user-select: inherit !important;
         
-        /* sm */
+        /* 1つ: sm */
         @media (width < 640px) {
-            width: 90vw!important;
+            width: 85vw!important;
             height: auto!important;
         }
-        /* lg */
+        /* 2つ: sm - lg */
         @media (640px <= width <= 1024px) {
             width: 42vw!important;
             height: auto!important;
         }
-        /* xl */
+        /* 3つ: xl */
         @media (1024px < width) {
             width: 30vw!important;
             height: auto!important;
